# PyGenStability

./: .buildinfo  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  MarkovStability.py  PyGenStability.py  README.md  app.html  constructors.html  dataclustering.html  genindex.html  index.html  interface.hh  io.html  manifest.cmake  objects.inv  optimal_scales.html  plotting.html  py-modindex.html  pygenstability.html  pyproject.toml  search.html  searchindex.js  selection.xml  setup.py  tox.ini
.github/workflows/: python-app.yml  python-publish.yml  run-tox.yml
Louvain_to_python/: CMakeLists.txt  README.rst  interface.hh  manifest.cmake  selection.xml
Louvain_to_python/cmake/: FindLemon.cmake  FindLibClang.cmake  ROOTConfig-targets-release.cmake  ROOTConfig-targets.cmake  ROOTConfig.cmake
Louvain_to_python/cmake/modules/: RootBuildOptions.cmake  SearchInstalledSoftware.cmake  SetUpWindows.cmake
Louvain_to_python/louvain_to_python/: Makefile  io.h  linearised_internals_generic.h  louvain_gen.h  louvain_to_python.h  triangletest.edj  triangletest_null.edj  vector_partition.h
Louvain_to_python/pkg_templates/: setup.py.in
_modules/: index.html
_modules/pygenstability/: constructors.html  io.html  optimal_scales.html  plotting.html  pygenstability.html
_sources/: app.rst.txt  constructors.rst.txt  index.rst.txt  io.rst.txt  optimal_scales.rst.txt  plotting.rst.txt  pygenstability.rst.txt
_sources/examples/: example.ipynb.txt
cmake/: FindCppyy.cmake  ROOTConfig-version.cmake  ROOTUseFile.cmake
cmake/modules/: RootCPack.cmake
cpp/: graphhelpers.h  linearised_internals_comb.h  louvain_gen.h  main.cpp  run_gen_louvain.sh  stability.h  stability_gen.h
docs/: Makefile  index_readme.md
docs/source/: app.rst  conf.py  dataclustering.rst  index.rst
examples/: Example_1_undirected_sbm.ipynb  Example_2_directed.ipynb  Example_2_directed_plantedpartition.ipynb  Example_2_multiscale.ipynb  Example_3_constructors.ipynb  Example_3_directed.ipynb  Example_4_constructors.ipynb  Example_4_hypergraph.ipynb  Example_5_hypergraph.ipynb  Example_5_optimalscales.ipynb  Example_6_signed.ipynb  Example_7_data_clustering.ipynb  SBM_example.py  create_graph.py  example.html  example_directed_graphs.ipynb  harari_data.mat  multiscale_example.py  params.yaml  run_simple_example.sh  simple_example.py
examples/benchmark/: run_benchmark.py
examples/contrib/: simple_example.py
examples/leiden/: test.py
examples/multiscale_example/: multiscale_example.py
examples/notebook/: Example_1_undirected_sbm.ipynb  Example_2_directed.ipynb  Example_4_hypergraph.ipynb  Example_5_optimalscales.ipynb  create_graph.py
extra/lemon/: soplex.h
generalizedLouvain_API/: cpp_to_python.cpp
lemon-lib/: .hg_archival.txt  CMakeLists.txt
louvain_gen/: linearised_internals_norm.h  louvain_to_python.h  run_gen_louvain.cpp
py/: initializor.py
pygenstability/: HyperGraph.ipynb  __init__.py  app.py  cli.py  constructors.py  generalized_louvain.cpp  io.py  main.py  plotting.py  pygenstability.py  utils.py  version.py
test/: test_SBM.ipynb  test_SBM.py  test_cpp.py
tests/: conftest.py  test_app.py  test_constructors.py  test_dataclustering.py  test_mock.py  test_plotting.py  test_pygenstability.py  utils.py
(+52 files in other folders)
